--- a/docs/Stories/function.mdx
+++ b/docs/Stories/function.mdx
@@ -4,15 +4,15 @@ sidebar_position: 3
 
 # Function Stories
 
-These stories are the simplest and they are used by **[hoarcekat](https://www.roblox.com/library/4621580428/Hoarcekat)**.
+These stories are the simplest. They are used by **[hoarcekat](https://www.roblox.com/library/4621580428/Hoarcekat)** and can be used for migrating.
 
-These are functions returned by the story module that UI-Labs executes passing the **Frame** where they need to be displayed, expecting them to mount the User Interface.
+These stories are functions that receive a target where the story needs to be mounted
 
-Once executed, these functions must return another function that cleans up the UI, usually calling `Roact.unmount()`
+Once executed, these functions must return cleaning function, usually calling `Roact.unmount()`
 
 ### Using Roact
 
-This is an example of how a function Story can be written with **Roact**
+This is an example of how a **Function Story** can be written with **Roact**
 
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
@@ -25,9 +25,9 @@ import TabItem from "@theme/TabItem";
    local ReplicatedStorage = game:GetService("ReplicatedStorage")
    local Roact = require(ReplicatedStorage.Roact)
 
-   return function (target: Frame)
+   local function story(target: Frame)
       local element = Roact.createElement("TextLabel", {
-         Text = "Hello UI-LABS!",
+         Text = "Hello UI LABS!",
          TextColor3 = Color3.new(1,1,1),
          BackgroundColor3 = Color3.new(0.3, 0.3, 0.3),
          TextSize = 20,
@@ -40,40 +40,61 @@ import TabItem from "@theme/TabItem";
          Roact.unmount(handle)
       end
    end
+
+   return story
 ```
 
    </TabItem>
    <TabItem value="ts" label="Roblox-TS">
 
-```ts
-//HelloText.story.ts
+```tsx
+//HelloText.story.tsx
 import Roact from "@rbxts/roact";
+import { FunctionStory } from "@rbxts/ui-labs"; //Typing is optional
 
-export = (target: Frame) => {
-  const element = Roact.createElement("TextLabel", {
-    Text: "Hello UI-LABS!",
-    TextColor3: new Color3(1, 1, 1),
-    BackgroundColor3: new Color3(0.3, 0.3, 0.3),
-    TextSize: 20,
-    Size: UDim2.fromOffset(300, 50),
-  });
-  const handle = Roact.mount(element, target); //We mount inside target
+const story: FunctionStory = (target) => {
+   const element = (
+      <textlabel
+         Text={"Hello UI LABS!"}
+         TextColor3={new Color3(1, 1, 1)}
+         BackgroundColor3={new Color3(0.3, 0.3, 0.3)}
+         TextSize={20}
+         Size={UDim2.fromOffset(300, 50)}
+      />
+   );
+   const handle = Roact.mount(element, target); //We mount inside target
 
-  //We need to return another function to unmount the handle
-  return () => {
-    Roact.unmount(handle);
-  };
+   //We need to return another function to unmount the handle
+   return () => {
+      Roact.unmount(handle);
+   };
 };
+
+export = story;
 ```
 
    </TabItem>
 </Tabs>
 
 :::info Fusion Support
-UI-Labs currently does not support [Fusion](https://elttob.uk/Fusion/0.2/) natively, therefore, this is the only way you can visualize a Fusion story.
-However, native support for Fusion is planned in further updates
+UI Labs currently does not support [Fusion](https://elttob.uk/Fusion/0.2/) natively, therefore, this is the only way you can visualize a Fusion story.
+However, native support for Fusion is planned in a future
 :::
 
 :::danger Story Erroring
-The clean up function will not be executed if the returned function errors. If this happens, a **Studio restart** may be needed to avoid memory leaks and non-destroyed Instances
+The cleanup function cant be executed if the mounting function errors. If the story did mount, a **Studio restart** may be needed to avoid memory leaks and non-destroyed Instances
+
+```lua
+return function(target)
+   local newElement = Roact.createElement("TextLabel", {})
+   local handle = Roact.mount(newElement, target) --Roact did mount so unmounting is necessary
+
+   error("Erroring on purpose") --This error will prevent the cleanup function from being returned
+   return function()
+      --Never unmounts
+      Roact.unmount(handle)
+   end
+end
+```
+
 :::
