--- a/docs/Plugin/multimount.mdx
+++ b/docs/Plugin/multimount.mdx
@@ -9,14 +9,14 @@ Each of these story's previews will have their own isolated enviroment and will 
 
 To do this, right click your story and select **Mount On Top**
 
-![MountOnTop](mountontop.png)
+![MountOnTop](img/mountontop.png)
 
-When you left-click your story, this will be mounted in the **Main** tab and it
+When you left-click your story as you've been doing all of this time, this will be mounted in the **Main** tab and it
 will unmount the current Main tab.<br></br>
-The Main tab can be recognized with a dot at the start, however, all tabs will be shown here.
 
-The amount of previews mounted for this story can be seen at the story Right-Corner
+The Main tab can be recognized with a dot at the start, however, all tabs will be shown here.<br></br>
+The amount of preview tabs mounted for this story can be seen at the story Right-Corner
 
-![StoryTabs](storytabs.png)
+![StoryTabs](img/storytabs.png)
 
 The Toolbar buttons, moving, zooming, and Controls will be applied to the story preview you are currently selecting
